Update CI workflow

--- a/.github/workflows/check-submission.yml
+++ b/.github/workflows/check-submission.yml
@@ -9,5 +9,5 @@ jobs:
     with:
       repository: ${{ github.repository }}
       ref: ${{ github.sha }}
-      reproducible-document: split_comparisons.ipynb
       binder-cache-branch: binder-cache
+      build-artifacts: split_comparisons.html
